--- a/src/main/resources/assets/byg/lang/en_us.json
+++ b/src/main/resources/assets/byg/lang/en_us.json
@@ -2013,7 +2013,7 @@
   "item.byg.zelkova_stairs": "Zelkova Stairs",
   "item.byg.zelkova_trapdoor": "Zelkova Trapdoor",
   "item.byg.zelkova_wood": "Zelkova Wood",
-  "itemGroup.byg.byg": "Biomes You Go",
+  "itemGroup.byg": "Biomes You Go",
   "text.autoconfig.byg/byg-world.title": "Configure BYG",
   "text.autoconfig.byg/byg-world.category.End_Dimension": "End Dimension",
   "text.autoconfig.byg/byg-world.category.Nether_Dimension": "Nether Dimension",
